--- a/public/templates/ownerProfile.html
+++ b/public/templates/ownerProfile.html
@@ -6,6 +6,11 @@
 <br>
 <br>
 <div class="container">
+      <div class="row center">
+        
+      <a ui-sref="info.owner" class="btn center">Add a House</a>
+      <br>
+      </div>
       <div class="row">
         <div class="col s4" ng-repeat='house in houses track by $index' >
           <div class="card">
@@ -26,6 +31,5 @@
           </div>
         </div>
       </div>
-
 
 </div>
