Fix add property form

--- a/public/templates/ownerProfile.html
+++ b/public/templates/ownerProfile.html
@@ -8,7 +8,7 @@
 <div class="container">
       <div class="row center">
         
-      <a ui-sref="info.owner" class="btn center">Add a House</a>
+      <a ui-sref="newProperty" class="btn center">Add a House</a>
       <br>
       </div>
       <div class="row">
