--- a/public/templates/owner.html
+++ b/public/templates/owner.html
@@ -1,8 +1,41 @@
+<ul class="collapsible" data-collapsible="accordion">
+    <li ng-show="hideForm">
+      <div class="collapsible-header"><i class="material-icons">assignment_ind</i>Edit Your Profile</div>
+      <div class="collapsible-body">
 
-<h4 class="center">Build Your Profile</h4>
+        <!-- <h4 class="center">Build Your Profile</h4> -->
+        <div class="container">
+        <div class="row">
+            <form class="col s12" ng-submit="submitInfo(user)" name="user">
+              <div class="row">
+                <div class="input-field col s6">
+                  <input id="firstName" type="text" class="validate" ng-model="user.firstName" required="true" />
+                  <label for="firstName">First Name</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="lastName" type="text" class="validate" ng-model="user.lastName" required="true" />
+                  <label for="lastName">Last Name</label>
+                </div>
+                <div class="input-field col s12">
+                  <input id="email" type="email" class="validate" ng-model="user.email" />
+                  <label for="email">Email</label>
+                </div>
+              </div>
+            <div class="row">
+              <div class="col s12">
+                <button type="submit" name="button" class="btn">Submit</button>
+              </div>
+            </form>
+      </div>
+    </li>
+  </ul>
+
+
+<h4 class="center" ng-hide="hideForm">Build Your Profile</h4>
+
 <div class="container">
 <div class="row">
-    <form class="col s12" ng-submit="submitInfo(user)" name="user">
+    <form class="col s12" ng-submit="submitInfo(user)" name="user" ng-hide="hideForm">
       <div class="row">
         <div class="input-field col s6">
           <input id="firstName" type="text" class="validate" ng-model="user.firstName" required="true" />
@@ -22,6 +55,11 @@
         <button type="submit" name="button" class="btn">Submit</button>
       </div>
     </form>
+
+<br>
+<br>
+<br>
+<br>
 
 
   </div>
