--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,15 +55,15 @@
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Sheryl</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="www.sherylboughton.com">sherylboughton.com</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="www.warlyware.com">warlyware.com</a></li>
           </ul>
         </div>
       </div>
