--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Dan</h5>
           <ul>
             <li><a class="white-text" href="http://www.warlyware.com">warlyware.com</a></li>
           </ul>
