redirect links to github

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Dan &amp Sheryl</a>
+      Made by <a class="orange-text text-lighten-3" href="https://github.com/warlyware/">Dan</a> &amp <a class="orange-text text-lighten-3" href="https://github.com/sherylpeebee">Sheryl</a>
       </div>
     </div>
   </footer>
