--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,38 +1,20 @@
 
-  <h1 id="intro" class="center blue-text text-lighten-5">Going out of town?</h1>
-<div class="row">
-  <div class="l6 m12 left" id="left-img">
-    <img id="left-banner" class="responsive-img banner" src="https://pbs.twimg.com/profile_images/378800000397127630/3c7dfe9f2943408ca178dede7c6ec39a.jpeg">
-    <div id="find-place" class="find center">
-      <!-- <h3 ui-sref="info.traveller">find a place to stay</h3> -->
-      <h3 ui-sref='listings'>find a place to stay</h3>
-    </div>
-  </div>
+  <h1 id="intro" class="center">Going out of town?</h1>
+<div class="container">
+  <div class="row">
+    <div class="col s5">
+      <div class="overlay" id="overlay-left">
 
-  <div class="l6 m12 right" id="right-img">
-    <img id="right-banner" class="responsive-img banner" src="http://cdn.humble-homes.com/wp-content/uploads/2012/10/73.jpg">
-    <div id="find-peace" class="find center">
-      <h3 ui-sref="info.owner">find peace of mind</h3>
+      </div>
+      <h3 id="find-place" ui-sref="listings" class="find-button animated shake">find a place to stay</h3>
+    </div>
+
+
+    <div class="col s5 offset-s2">
+      <div class="overlay" id="overlay-right">
+
+      </div>
+      <h3 id="find-peace" ui-sref="info.owner" class="find-button animated shake">find peace of mind</h3>
     </div>
   </div>
 </div>
-<!-- 616x500 -->
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="parallax-container">
-      <div class="parallax"><img src="http://s.petrolicious.com/quick-takes/2013/scott-fisher/roadster-roadtrip-7.jpg"></div>
-    </div>
-
-    <div class="container">
-      <br><br>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-      <h1 ui-sref="listings" class="header center cyan-text">Griftr</h1>
-    </div>
-   <div class="parallax-container">
-     <div class="parallax"><img src="https://download.unsplash.com/photo-1430620081187-c59647bac29e"></div>
-   </div>
-  </div>
