edit homepage button styles

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -6,7 +6,7 @@
       <div class="overlay" id="overlay-left">
 
       </div>
-      <h3 id="find-place" ui-sref="listings" class="find-button animated shake">find a place to stay</h3>
+      <h3 id="find-place" ui-sref="listings" class="find-button animated shake center">find a place to stay</h3>
     </div>
 
 
@@ -14,7 +14,7 @@
       <div class="overlay" id="overlay-right">
 
       </div>
-      <h3 id="find-peace" ui-sref="info.owner" class="find-button animated shake">find peace of mind</h3>
+      <h3 id="find-peace" ui-sref="info.owner" class="find-button animated shake center">find peace of mind</h3>
     </div>
   </div>
 </div>
