--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,10 +35,6 @@ h4, h5 {
 input {
   color: white !important;
 }
-.intro {
-  position: relative;
-  margin-bottom: 100px;
-}
 
 /*#right-banner {
   position: relative;
@@ -104,7 +100,7 @@ h3#find-place {
     /* position: relative; */
     /* right: 0; */
     position: relative;
-    right: 25%;
+    right: 40%;
 }
 h3.find-button {
     padding: 17px;
@@ -124,4 +120,8 @@ h3.find-button:hover {
     /*background-color: rgba(86, 125, 148, 0.5);*/
     cursor: pointer;
     background-color: rgba(110, 150, 157, 0.5);
+}
+
+#intro {
+  color: #6A6C6D;
 }
