--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 <body>
   <nav id="main_nav" role="navigation" ng-controller="NavCtrl">
 
-    <div class="nav-wrapper container"><a id="logo-container" ui-sref="home" class="brand-logo">Griftr</a>
+    <div class="nav-wrapper container"><a id="logo-container" ui-sref="home" class="brand-logo nav-options">Griftr</a>
       <ul class="right hide-on-med-and-down">
         <li ><a class="nav-options" ui-sref='listings'>Listings</a></li>
         <% if (user) { %>
