change project name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Griftr</title>
+  <title>Driftr</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
   <nav id="main_nav" role="navigation" ng-controller="NavCtrl">
 
-    <div class="nav-wrapper container"><a id="logo-container" ui-sref="home" class="brand-logo nav-options">Griftr</a>
+    <div class="nav-wrapper container"><a id="logo-container" ui-sref="home" class="brand-logo nav-options">Driftr</a>
       <ul class="right hide-on-med-and-down">
         <li ><a class="nav-options" ui-sref='listings'>Listings</a></li>
         <% if (user) { %>
