--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,7 +110,8 @@ h3.find-button {
     display: none;
     border-radius: 10px;
     position: relative;
-    top: 130px;
+    top: 0px;
+    /*top: 130px;*/
     transition: background-color .8s ease;
     font-size: inherit;
     /*transition: color .8s ease;*/
