--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,3 +130,13 @@ h3.find-button:hover {
   color: #6A6C6D;
   font-variant: small-caps !important;
 }
+
+a.nav-options {
+    height: 106px;
+}
+
+nav .nav-wrapper {
+    line-height: 99px;
+    position: relative;
+    height: 100%;
+}
