more home styles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,36 +44,10 @@
 
   <ui-view></ui-view>
 
-
-  <%# <footer class="page-footer indigo darken-3">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">we made this for yu. yuse it.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Sheryl</h5>
-          <ul>
-            <li><a class="white-text" href="http://www.sherylboughton.com">sherylboughton.com</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Dan</h5>
-          <ul>
-            <li><a class="white-text" href="http://www.warlyware.com">warlyware.com</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
+    <div class="footer-copyright page-footer blue-grey lighten-2">
       Made by <a class="orange-text text-lighten-3" href="https://github.com/warlyware/">Dan</a> &amp <a class="orange-text text-lighten-3" href="https://github.com/sherylpeebee">Sheryl</a>
-      </div>
     </div>
-  </footer>%>
+  <%# </footer>%>
 
 
   <!--  Scripts-->
