--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,8 +24,8 @@ body {
   /*margin: 0;*/
   /*background-color: rgb(111, 199, 249);*/
   background-image: url("http://i.huffpost.com/gen/1367942/images/o-TRAVEL-YOUNG-facebook.jpg");
-  background-size: 100%;
   background-repeat: no-repeat;
+  /*background-attachment: fixed;*/
   z-index: -1;
 }
 
@@ -34,28 +34,6 @@ h4, h5 {
 }
 input {
   color: white !important;
-}
-
-/*#right-banner {
-  position: relative;
-  z-index: -1;
-}*/
-.banner {
-  position: relative;
-  z-index: -1;
-}
-
-.parallax-container {
-    height: 578px;
-  }
-
-#white-bar {
-    height: 16%;
-    width: 100%;
-    background-color: white;
-    color: black;
-    position: absolute;
-    top: 10%;
 }
 
 nav#main_nav {
@@ -76,18 +54,16 @@ div#footer-containter {
     height: 110px;
 }
 
-footer.page-footer {
-    margin-top: 0px;
-    padding-top: 20px;
-    background-color: #ee6e73;
-}
-
-footer.page-footer .footer-copyright {
+.footer-copyright {
     overflow: hidden;
-    height: 50px;
     line-height: 50px;
     color: rgba(255, 255, 255, 0.8);
      background-color: inherit;
+     background-color: #ee6e73;
+     position: absolute;
+     width: 100%;
+     bottom: 0;
+     padding: 0 0 0 12px;
 }
 
 
