--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,7 +60,7 @@ div#footer-containter {
     color: rgba(255, 255, 255, 0.8);
      background-color: inherit;
      background-color: #ee6e73;
-     position: absolute;
+     position: fixed;
      width: 100%;
      bottom: 0;
      padding: 0 0 0 12px;
