prune some display data

--- a/public/templates/listing.html
+++ b/public/templates/listing.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  {{params}}
+  <!-- {{params}} -->
       <div class="row">
         <h1>{{houseInfo.location}}</h1>
         <div class="col s12">
