--- a/public/templates/listings.html
+++ b/public/templates/listings.html
@@ -15,7 +15,7 @@
               <div>Bathrooms: {{house.bathrooms}}</div>
               <div>Start Date: {{house.startDate}}</div>
               <div>End Date: {{house.endDate}}</div>
-              <div>Id: {{house._id}}</div>
+              <!-- <div>Id: {{house._id}}</div> -->
             </div>
             <div class="card-action">
 
