--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,9 @@
 <%# end of navbar%>
 
   <ui-view></ui-view>
+  <div class="" id="sheet-layer">
+
+  </div>
 
     <div class="footer-copyright page-footer blue-grey lighten-2">
       Made by <a class="orange-text text-lighten-3" href="https://github.com/warlyware/">Dan</a> &amp <a class="orange-text text-lighten-3" href="https://github.com/sherylpeebee">Sheryl</a>
