--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -3,17 +3,17 @@
 <div class="container">
   <div class="row">
     <div class="col s5">
-      <div class="overlay" id="overlay-left">
+      <!-- <div class="overlay" id="overlay-left">
 
-      </div>
+      </div> -->
       <h3 id="find-place" ui-sref="listings" class="find-button animated shake center">find a place to stay</h3>
     </div>
 
 
     <div class="col s5 offset-s2">
-      <div class="overlay" id="overlay-right">
+      <!-- <div class="overlay" id="overlay-right">
 
-      </div>
+      </div> -->
       <h3 id="find-peace" ui-sref="info.owner" class="find-button animated shake center">find peace of mind</h3>
     </div>
   </div>
