--- a/public/templates/owner.html
+++ b/public/templates/owner.html
@@ -1,6 +1,6 @@
 <ul class="collapsible" data-collapsible="accordion">
     <li ng-show="hideForm">
-      <div class="collapsible-header"><i class="material-icons">assignment_ind</i>Edit Your Profile</div>
+      <div class="collapsible-header" id="edit_profile"><i class="material-icons">assignment_ind</i>Edit Your Profile</div>
       <div class="collapsible-body">
 
         <!-- <h4 class="center">Build Your Profile</h4> -->
