--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -18,3 +18,9 @@
     </div>
   </div>
 </div>
+
+  <div class="parallax-container">
+     <div class="parallax">
+       <img src="http://sharetu.com/wp-content/uploads/2015/07/o-TRAVELING-ALONE-facebook.jpg">
+     </div>
+  </div>
