--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -140,9 +140,11 @@ div#sheet-layer {
 .parallax-container {
     position: relative;
     overflow: hidden;
-    height: 900px;
+    height: 780px;
+    /*height: 900px;*/
     /* bottom: 0; */
-    top: 36pc;
+    top: 22pc;
+    /*top: 36pc;*/
 }
 /*https://pbs.twimg.com/profile_images/378800000397127630/3c7dfe9f2943408ca178dede7c6ec39a.jpeg*/
 
