--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,6 +146,10 @@ div#sheet-layer {
     top: 22pc;
     /*top: 36pc;*/
 }
+
+.ng-scope {
+    margin-bottom: 40px;
+}
 /*https://pbs.twimg.com/profile_images/378800000397127630/3c7dfe9f2943408ca178dede7c6ec39a.jpeg*/
 
 
