--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,7 +143,8 @@ div#sheet-layer {
     height: 700px;
     /*height: 900px;*/
     /* bottom: 0; */
-    top: 22pc;
+    top: 20pc;
+    /*top: 22pc;*/
     /*top: 36pc;*/
 }
 
