--- a/public/templates/listing.html
+++ b/public/templates/listing.html
@@ -2,22 +2,72 @@
 <div class="container">
   <!-- {{params}} -->
       <div class="row">
-        <h1>{{houseInfo.location}}</h1>
+        <h1 class="listingLocation">{{houseInfo.location}}</h1>
         <div class="col s12">
           <div class="card">
             <div class="card-image">
               <img ng-src="{{houseInfo.image}}">
-              <span class="card-title">{{houseInfo.location}}</span>
+              <span class="card-title listingLocation">{{houseInfo.location}}</span>
             </div>
             <div class="card-content">
-              <div>Bedrooms: {{houseInfo.bedrooms}}</div>
-              <div>Bathrooms: {{houseInfo.bathrooms}}</div>
-              <div>Start Date: {{houseInfo.startDate}}</div>
-              <div>End Date: {{houseInfo.endDate}}</div>
+              <div class="row">
+                <div class="col s4">
+                  <div>Start Date: {{houseInfo.startDate | date: "shortDate"}}</div>
+                  <div>End Date: {{houseInfo.endDate | date: "shortDate"}}</div>
+                  <div>Bedrooms: {{houseInfo.bedrooms}}</div>
+                  <div>Bathrooms: {{houseInfo.bathrooms}}</div>
+                </div>
+                <div class="col s4 offset-s2">
+                  <div>Start Date: {{houseInfo.startDate | date: "shortDate"}}</div>
+                  <div>End Date: {{houseInfo.endDate | date: "shortDate"}}</div>
+                  <div>Bedrooms: {{houseInfo.bedrooms}}</div>
+                  <div>Bathrooms: {{houseInfo.bathrooms}}</div>
+                </div>
+              </div>
             </div>
+            <div class="card-action">
+             <!-- <a href="#request_modalPOOP" class="modal-trigger">Contact the Owner</a> -->
+             <a href="#request_modal" class="modal-trigger">Request A Reservation</a>
+           </div>
           </div>
         </div>
       </div>
 
+      <!-- Modal Structure -->
+        <div id="request_modal" class="modal modal-fixed-footer">
+          <div class="modal-content">
+            <h4 id="request_header">Request a Reservation for <span class="listingLocation">{{houseInfo.location}}</span></h4>
+            <div class="row">
+              <form class="col s12">
+                <!-- <div class="input-field col s6">
+                  <input id="first_name2" type="text" class="validate">
+                  <label class="active" for="first_name2">First Name</label>
+                </div> -->
+                <div class="input-field col s12">
+                  <textarea id="textarea1" class="materialize-textarea" placeholder="ex: I promise I'm not a serial killer."></textarea>
+                  <label for="textarea1" class="active">Optional Message</label>
+                  <div>
+                    I don't mind:
+                  </div>
 
+                  <div class="row">
+                    <!-- <div class="col s6"> -->
+                      <p ng-repeat="condition in ['walk the dog', 'water the plants', 'take the trash out', 'babysit', 'wash dishes'] track by $index" class="col s6">
+                        <input type="checkbox" class="filled-in" id="{{condition}}" />
+                        <label for="{{condition}}">{{condition}}</label>
+                      </p>
+                    <!-- </div> -->
+                  </div>
+
+
+
+                </div>
+                <button type="button" name="button" id="request_btn" href="#" class="btn modal-action modal-close">Send Request</button>
+              </form>
+            </div>
+          </div>
+          <!-- <div class="modal-footer">
+            <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+          </div> -->
+        </div>
 </div>
