--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -178,6 +178,14 @@ button#request_btn {
     border-radius: 8px;
     will-change: top, opacity;
 }
+
+textarea.materialize-textarea {
+    overflow-y: hidden;
+    padding: 1rem 0 0;
+    resize: none;
+    min-height: 2rem;
+    /* margin-bottom: 0; */
+}
 /*https://pbs.twimg.com/profile_images/378800000397127630/3c7dfe9f2943408ca178dede7c6ec39a.jpeg*/
 
 
