add skeleton for house request

--- a/public/templates/listing.html
+++ b/public/templates/listing.html
@@ -47,7 +47,7 @@
                   <textarea id="textarea1" class="materialize-textarea" placeholder="ex: I promise I'm not a serial killer."></textarea>
                   <label for="textarea1" class="active">Optional Message</label>
                   <div>
-                    I don't mind:
+                    I am willing to:
                   </div>
 
                   <div class="row">
