add state dependent style

--- a/public/templates/listing.html
+++ b/public/templates/listing.html
@@ -52,7 +52,7 @@
 
                   <div class="row">
                     <!-- <div class="col s6"> -->
-                      <p ng-repeat="condition in ['walk the dog', 'water the plants', 'take the trash out', 'babysit', 'wash dishes'] track by $index" class="col s6">
+                      <p ng-repeat="condition in ['pet sit', 'water the plants', 'not smoke', 'call with updates', 'other'] track by $index" class="col s6">
                         <input type="checkbox" class="filled-in" id="{{condition}}" />
                         <label for="{{condition}}">{{condition}}</label>
                       </p>
