--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 <%# end of navbar%>
 
   <ui-view></ui-view>
-  <div class="" id="sheet-layer" ng-if="paramCheck">
+  <div class="" id="sheet-layer" ng-if="currentState !== 'home' && currentState !== 'listings'">
 
   </div>
 
