--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
   <link href="stylesheets/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="stylesheets/animate.css/animate.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//cdn.jsdelivr.net/alertifyjs/1.4.1/css/alertify.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.4.1/css/themes/default.min.css"/>
   <link href="stylesheets/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -55,6 +57,7 @@
 
   <!--  Scripts-->
   <script src="/packages/jquery/dist/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/alertifyjs/1.4.1/alertify.min.js"></script>
   <script src="/packages/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/packages/materialize/materialize.min.js"></script>
   <script src="/packages/lettering.js/jquery.lettering-0.6.1.min.js"></script>
