--- a/public/templates/newProperty.html
+++ b/public/templates/newProperty.html
@@ -30,23 +30,23 @@
         <div class="input-field col s12">
         <h5>Give us the deets.</h5>
           <p>
-            <input type="checkbox" id="pets" class="filled-in" ng-model="user.info.pets"/>
+            <input type="checkbox" id="pets" class="filled-in" ng-model="house.conditions.pets"/>
             <label for="pets">I need petsitting</label>
           </p>
           <p>
-            <input type="checkbox" id="plants" class="filled-in" ng-model="user.info.plants"/>
+            <input type="checkbox" id="plants" class="filled-in" ng-model="house.conditions.plants"/>
             <label for="plants">I gots plants</label>
           </p>
           <p>
-            <input type="checkbox" id="updates" class="filled-in" ng-model="user.info.updates"/>
+            <input type="checkbox" id="updates" class="filled-in" ng-model="house.conditions.updates"/>
             <label for="updates">I want updates</label>
           </p>
           <p>
-            <input type="checkbox" class="filled-in" id="smoking" ng-model="user.info.noSmoking"/>
+            <input type="checkbox" id="smoking"  class="filled-in" ng-model="house.conditions.noSmoking"/>
             <label for="smoking">No smoking!!</label>
           </p>
           <p>
-              <input type="checkbox" id="other" class="filled-in" ng-model="user.info.other"/>
+              <input type="checkbox" id="other" class="filled-in" ng-model="house.conditions.other"/>
               <label for="other">Other stuffs.</label>
           </p>
         </div>
