fix incorrectly disabled views

--- a/public/templates/owner.html
+++ b/public/templates/owner.html
@@ -1,5 +1,5 @@
-<ul class="collapsible" data-collapsible="accordion">
-    <li ng-if="!hideForm">
+<ul class="collapsible" data-collapsible="accordion" ng-if="!hideForm">
+    <li >
       <div class="collapsible-header" id="edit_profile"><i class="material-icons">assignment_ind</i>Edit Your Profile</div>
       <div class="collapsible-body">
 
