--- a/public/templates/owner.html
+++ b/public/templates/owner.html
@@ -52,7 +52,7 @@
       </div>
     <div class="row">
       <div class="col s12">
-        <button type="submit" name="button" class="btn">Submit</button>
+        <button type="submit" name="button" class="btn" id="buildProfileBtn">Submit</button>
       </div>
     </form>
 
