--- a/public/templates/owner.html
+++ b/public/templates/owner.html
@@ -1,4 +1,4 @@
-<ul class="collapsible" data-collapsible="accordion" ng-if="!hideForm">
+<ul data-collapsible="accordion" ng-class="{hidden: hideForm}" class="collapsible" id="editProfile">
     <li >
       <div class="collapsible-header" id="edit_profile"><i class="material-icons">assignment_ind</i>Edit Your Profile</div>
       <div class="collapsible-body">
@@ -23,7 +23,7 @@
               </div>
             <div class="row">
               <div class="col s12">
-                <button type="submit" name="button" class="btn">Submit</button>
+                <button type="submit" name="button" class="btn" id="editProfileBtn">Submit</button>
               </div>
             </form>
       </div>
