add disabled button press depending on auth info

--- a/public/templates/listing.html
+++ b/public/templates/listing.html
@@ -27,7 +27,7 @@
             </div>
             <div class="card-action">
              <!-- <a href="#request_modalPOOP" class="modal-trigger">Contact the Owner</a> -->
-             <a href="#request_modal" class="modal-trigger">Request A Reservation</a>
+             <a href="#request_modal" class="modal-trigger" id="reservation_request">Request A Reservation</a>
            </div>
           </div>
         </div>
